--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -79,7 +79,8 @@ pre {
     padding: 0pt;
     margin-top: $spacing-unit;
     margin-bottom: $spacing-unit;
-    margin-left: 4*$spacing-unit;
+    margin-left: $spacing-unit;
+    overflow-x: scroll;
 }
 
 code {
