--- a/scss/_front.scss
+++ b/scss/_front.scss
@@ -10,6 +10,7 @@
     right: 0%;
     bottom: 0%;
     overflow-y: scroll;
+    overflow-x: hidden;
     -webkit-overflow-scrolling: touch;
 
     // No sliding effect
